--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
     "humanmade/s3-uploads": "~2.2",
     "wpackagist-plugin/mailgun": "1.7.9",
     "wpackagist-plugin/all-in-one-wp-migration": "7.62",
-    "wpackagist-theme/twentytwentytwo":"^1.2"
+    "wpackagist-theme/twentytwentytwo":"^1.2",
+    "wpackagist-plugin/duplicate-page":"^4.4"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
